# velora-shell

./: CMakeLists.txt
.github/workflows/: upload.yml
archlinux/: PKGBUILD
debian/: changelog  control  dde-shell.install
frame/qml/: PanelPopupWindow.qml  PanelToolTip.qml
panels/: CMakeLists.txt
panels/dock/: CMakeLists.txt  applicationtraymanager.cpp  applicationtraymanager.h  constants.h  dockpanel.cpp  dockpanel.h  layoutmodemanager.cpp  layoutmodemanager.h  loadtrayplugins.cpp  loadtrayplugins.h  nativetrayitems.cpp  nativetrayitems.h  pluginmanagerextension.cpp  pluginmanagerextension_p.h  waylanddockhelper.cpp
panels/dock/dconfig/: org.deepin.ds.dock.layout.json
panels/dock/package/: main.qml
panels/dock/taskmanager/package/: AppItem.qml
panels/dock/tray/: CMakeLists.txt  trayitem.cpp  traysortordermodel.cpp  traysortordermodel.h
panels/dock/tray/package/: ActionLegacyTrayPluginDelegate.qml  AppTrayItemDelegate.qml  NativeTrayItemDelegate.qml  StashedItemDelegateChooser.qml  TrayItemDelegateChooser.qml  tray.qml
panels/dock/tray/quickpanel/: quickpanelproxymodel.cpp
panels/toppanel/: CMakeLists.txt  toppanel.cpp  toppanel.h
panels/toppanel/package/: TopPanel.qml  TrayItemsRow.qml  metadata.json
rpm/: _service  velora-shell.spec
shell/: AlphaWatermark.qml  CMakeLists.txt  dde-shell.qrc  main.cpp  shell.cpp  shell.h
shell/translations/: alphawatermark_zh_CN.ts
tests/panels/: CMakeLists.txt
tests/panels/notification/server/: CMakeLists.txt
